fix(editor): set code wrapping to overflow
fixes #1634

--- a/frontend/packages/editor/src/blocknote/core/extensions/Blocks/nodes/Block.module.css
+++ b/frontend/packages/editor/src/blocknote/core/extensions/Blocks/nodes/Block.module.css
@@ -299,17 +299,17 @@ NESTED BLOCKS
   background-color: var(--color4);
   border-radius: 6px;
   padding: 10px 16px;
+  overflow: auto;
   /* margin-left: -16px;
   margin-right: -16px; */
   position: 'relative';
-  white-space: pre-wrap;
 }
 
 .blockContent[data-content-type='codeBlock'] code {
   font-family: 'ui-monospace', 'SFMono-Regular', 'SF Mono', Menlo, Consolas,
     'Liberation Mono', monospace;
   font-size: 0.85em;
-  white-space: pre-wrap;
+  white-space: pre;
 }
 
 /* LISTS */
